--- a/requirements.txt
+++ b/requirements.txt
@@ -65,3 +65,9 @@ yaml=0.2.5=he774522_0
 zlib=1.2.13=h8cc25b3_1
 zstandard=0.23.0=py311h4fc1ca9_1
 zstd=1.5.6=h8880b57_0
+
+dotenv~=0.9.9
+python-dotenv~=1.1.1
+langchain~=0.3.27
+uvicorn~=0.35.0
+fastapi~=0.112.2
